--- a/index.html
+++ b/index.html
@@ -1,18 +1,59 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Surveyhub</title>
-  <meta name="description" content="Software for customer and survey management for the building preservations industry">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Surveyhub Software</title>
+  <meta name="author" content="Surveyhub" />
+  <meta name="description" content="Software to manage customers and surveys in the building preservations industry" />
+  <meta name="keywords"  content="sotware, timber and damp, woodworm, wall ties, remedial building services, building preservations" />
+  <meta name="Resource-type" content="Document" />
+
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,400,700" />
+  <link rel="stylesheet" type="text/css" href="bower_components/pagepiling.js/jquery.pagepiling.css" />
+  <link rel="stylesheet" type="text/css" href="css/site.css" />
 </head>
 <body>
-  <h1>Surveyhub.io</h1>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+
+<nav>
+ <h1>Surveyhub</h1> 
+  <ul id="menu">
+    <li data-menuanchor="page1" class="active"><a href="#page1">Page 1</a></li>
+    <li data-menuanchor="page2"><a href="#page2">Page 2</a></li>
+    <li data-menuanchor="page3"><a href="#page3">Page 3</a></li>
+  </ul>
+</nav>
+
+  <div id="pagepiling">
+    <div class="section" id="section1">
+      <div class="intro">
+        <h1>Surveyhub</h1>
+        <p>Bulding Preservation Software</p>
+      </div>
+    </div>
+    <div class="section" id="section2">
+      <div class="intro">
+        <h1>Backgrounds</h1>
+        <p>Show it in full screen!</p>
+      </div>
+    </div>
+    <div class="section" id="section3">
+      <div class="intro">
+        <h1>Just terrific!</h1>
+        <p>Use the power of images</p>
+      </div>
+    </div>
+
+    <div class="section" id="section4">
+      <div class="intro">
+        <h1>Compatible</h1>
+        <p>Designed to work on tablet and mobile devices.</p>
+        <p>Oh! And its compatible with old browsers such as IE 8 or Opera 12!</p>
+      </div>
+    </div>
+  </div>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script type="text/javascript" src="bower_components/pagepiling.js/jquery.pagepiling.min.js"></script>
+  <script type="text/javascript" src="js/site.js"></script>
 </body>
 </html>
-
