--- a/index.html
+++ b/index.html
@@ -12,48 +12,54 @@
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,400,700" />
   <link rel="stylesheet" type="text/css" href="bower_components/pagepiling.js/jquery.pagepiling.css" />
   <link rel="stylesheet" type="text/css" href="css/site.css" />
+  <link rel="stylesheet" href="http://i.icomoon.io/public/698597c911/Chiswick/style.css">
 </head>
 <body>
 
-<nav>
- <h1>Surveyhub</h1> 
-  <ul id="menu">
-    <li data-menuanchor="page1" class="active"><a href="#page1">Page 1</a></li>
-    <li data-menuanchor="page2"><a href="#page2">Page 2</a></li>
-    <li data-menuanchor="page3"><a href="#page3">Page 3</a></li>
+  <nav>
+   <h2><i class="icon-surveyhub"></i>urveyhub</h2> 
+   <ul id="menu">
+    <li><a href="http://dev.codeworks.systems">Sign in</a></li>
   </ul>
 </nav>
 
-  <div id="pagepiling">
-    <div class="section" id="section1">
-      <div class="intro">
-        <h1>Surveyhub</h1>
-        <p>Bulding Preservation Software</p>
-      </div>
-    </div>
-    <div class="section" id="section2">
-      <div class="intro">
-        <h1>Backgrounds</h1>
-        <p>Show it in full screen!</p>
-      </div>
-    </div>
-    <div class="section" id="section3">
-      <div class="intro">
-        <h1>Just terrific!</h1>
-        <p>Use the power of images</p>
-      </div>
-    </div>
-
-    <div class="section" id="section4">
-      <div class="intro">
-        <h1>Compatible</h1>
-        <p>Designed to work on tablet and mobile devices.</p>
-        <p>Oh! And its compatible with old browsers such as IE 8 or Opera 12!</p>
-      </div>
+<div id="pagepiling">
+  <div class="section" id="section1">
+    <div class="intro">
+      <h1><i class="icon-surveyhub"></i>urveyhub</h1>
+      <p>Powerful and simple cloud based software to manage customers, estate agents, leads and surveys</p>
+      <p>Specifically tailored to timber and damp companies</p>
+      <p>in the building preservation industry</p>
+      <form action="http://forms.brace.io/marc@flerin.com" method="POST">
+        <input type="text" name="name">
+        <input type="email" name="_replyto">
+        <input type="submit" value="Send">
+      </form>
     </div>
   </div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script type="text/javascript" src="bower_components/pagepiling.js/jquery.pagepiling.min.js"></script>
-  <script type="text/javascript" src="js/site.js"></script>
+  <div class="section" id="section2">
+    <div class="intro">
+      <h1>Backgrounds</h1>
+      <p>Show it in full screen!</p>
+    </div>
+  </div>
+  <div class="section" id="section3">
+    <div class="intro">
+      <h1>Just terrific!</h1>
+      <p>Use the power of images</p>
+    </div>
+  </div>
+
+  <div class="section" id="section4">
+    <div class="intro">
+      <h1>Compatible</h1>
+      <p>Designed to work on tablet and mobile devices.</p>
+      <p>Oh! And its compatible with old browsers such as IE 8 or Opera 12!</p>
+    </div>
+  </div>
+</div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript" src="bower_components/pagepiling.js/jquery.pagepiling.min.js"></script>
+<script type="text/javascript" src="js/site.js"></script>
 </body>
 </html>
