fix for brace form

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <form class="form-inline" role="form" action="http://forms.brace.io/marc@flerin.com" method="POST">
         <div class="form-group">
           <label class="sr-only" for="exampleInputPassword2">Password</label>
-          <input type="text" required class="form-control" id="name" placeholder="name">
+          <input type="text" required class="form-control" name="name" id="name" placeholder="name">
         </div>
         <div class="form-group">
           <label class="sr-only" for="email">Email address</label>
-          <input type="email" required class="form-control" id="email" placeholder="email">
+          <input type="email" class="form-control" name="_replyto" placeholder="email" required>
         </div>
         <button type="submit" class="btn btn-default btn-success">Register Your Interest</button>
       </form>
