added analytics page

--- a/index.html
+++ b/index.html
@@ -60,16 +60,32 @@
   </div>
   <div class="section" id="section3">
     <div class="intro">
-      <h1>Just terrific!</h1>
+      <h1>This and that!</h1>
       <p>Use the power of images</p>
     </div>
   </div>
-
+  <div class="section" id="section5">
+    <div class="intro">
+      <div class="row">
+      <div class="col-md-5 col-md-offset-1">
+          <h1>Analysis</h1>
+          <p>Permform analysis on your customers, estate agents and other leads</p>
+          <p>Quickly see what's going on in your business</p>
+          <br/>
+          <a <li data-menuanchor="page5" href="#page5" class="btn-lg btn-default btn-warning">Learn More</a>
+          <br/>
+        </div>
+        <div class="col-md5">
+          <img src="images/lead-insights.png" height="80%">
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="section" id="section4">
     <div class="intro">
-      <h1>Compatible</h1>
-      <p>Designed to work on tablet and mobile devices.</p>
-      <p>Oh! And its compatible with old browsers such as IE 8 or Opera 12!</p>
+      <h1>Stuff</h1>
+      <p>Permform analysis on your customers, estate agents and other leads</p>
+      <p>Quickly see what's going on in your business</p>
     </div>
   </div>
 </div>
