--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <nav>
    <h2><i class="icon-surveyhub"></i>urveyhub</h2> 
    <ul id="menu">
-    <li><a href="http://dev.codeworks.systems" class="navbar-right">Sign in</a></li>
+    <li><a href="http://app.surveyhub.io" class="navbar-right">Sign in</a></li>
   </ul>
 </nav>
 
@@ -48,10 +48,11 @@
         <button type="submit" class="btn btn-default btn-success">Register Your Interest</button>
       </form>
       <br/>
-      <a <li data-menuanchor="page2" href="#page2" class="btn-lg btn-default btn-warning">Learn More</a>
+      <!--<a <li data-menuanchor="page2" href="#page2" class="btn-lg btn-default btn-warning">Learn More</a>-->
 
     </div>
   </div>
+  <!--
   <div class="section" id="section2">
     <div class="intro">
       <h1>Backgrounds</h1>
@@ -72,7 +73,7 @@
           <p>Permform analysis on your customers, estate agents and other leads</p>
           <p>Quickly see what's going on in your business</p>
           <br/>
-          <a <li data-menuanchor="page5" href="#page5" class="btn-lg btn-default btn-warning">Learn More</a>
+         <a <li data-menuanchor="page5" href="#page5" class="btn-lg btn-default btn-warning">Learn More</a>
           <br/>
         </div>
         <div class="col-md5">
@@ -88,6 +89,7 @@
       <p>Quickly see what's going on in your business</p>
     </div>
   </div>
+  -->
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/pagepiling.js/jquery.pagepiling.min.js"></script>
