change brace forms to form spree

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <p>Powerful and simple cloud based software to manage customers, estate agents, leads and surveys</p>
       <p>Specifically tailored to timber and damp companies</p>
       <p>in the building preservation industry</p>
-      <form class="form-inline" role="form" action="http://forms.brace.io/marc@flerin.com" method="POST">
+      <form class="form-inline" role="form" action="http:///formspree.io/marc@flerin.com" method="POST">
         <div class="form-group">
           <label class="sr-only" for="exampleInputPassword2">Password</label>
           <input type="text" required class="form-control" name="name" id="name" placeholder="name">
