added the demo site instead of app

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <nav>
    <h2><i class="icon-surveyhub"></i>urveyhub</h2> 
    <ul id="menu">
-    <li><a href="http://app.surveyhub.io" class="navbar-right">Sign in</a></li>
+    <li><a href="http://demo.surveyhub.io" class="navbar-right">Login to Demo</a></li>
   </ul>
 </nav>
 
